--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=journaldb
 server.port=8090
+# to enable auto mongodb indexing
+spring.data.mongodb.auto-index-creation=true
